test/integration/testdata/traefik/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-test
spec:
  ingressClassName: traefik
  rules:
  - http:
      paths:
      - path: /test
        pathType: Prefix
        backend:
          service:
            name: traefik-nginx
            port:
              number: 80
