test/integration/testdata/traefik/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-nginx
spec:
  ports:
  - port: 80
  selector:
    run: traefik-nginx
